# RAG

./: .gitignore  LICENSE  README.md  ans  ans.md  api_client.py  app.py  config.py  help.txt  intro.md  main.py  metadata_filter_example.py  milvus_demo.db  milvus_rag.db  pyproject.toml  quick_performance_test.py  read.md  res.json  sample.py  snips  test.html  test.out  test.py  test_delete_pdf.py  test_format.html  test_streaming.py  迁移.md
answers/: 20250803_044513_pin_configuration_for_74HC165D.md
docs/: CONCURRENT_EMBEDDING_GUIDE.md  DELETE_FUNCTIONALITY_GUIDE.md  METADATA_FILTERING_GUIDE.md  RAG技术栈概览.md  filter.md
docs/74HC165D/: 74HC165D.md  test.md
models/: readme.md
rag_modules/: __init__.py  clear.py  embedding.py  get_database.py  insert.py  pdf_manager.py  query.py  refer.py  reranker.py  search.py
static/: image-test.html
templates/: index.html
tests/: fastapi_test.py
uploads/: 20250803_174400_how_to_use_74HC165D.md  20250803_174652_how_to_use_74HC165D.md
uploads/74HC165D/: 74HC165D_meta.json
uploads/STM32F103x8/: STM32F103x8.md  STM32F103x8_meta.json
utils/: chunk.py  colored_logger.py  convert.py  pdf_manage.py  query.py
utilties/: __init__.py  load_pdf.py  query.py
